--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 REDIS_URL=redis-17695.c280.us-central1-2.gce.cloud.redislabs.com:17695
 REDIS_HOST=redis-17695.c280.us-central1-2.gce.cloud.redislabs.com
 REDIS_PORT=17695
-REDIS_PASSWORD=qAdz1eIKNC5JN1JrzHTw657xRoWIdfOv
+REDIS_PASSWORD=
 REDIS_DB=rushabhkumar-free-db
 
 
